* htdocs/index.html: Add news item, rotate others to...         * htdocs/news.html: ...here.         * htdocs/news/dependencies.html: New.         * htdocs/projects/cpplib.html: Update and remove older changes.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,52 @@ home page</a>.
 
 <dl>
 
+<dt><b>November 26, 2000</b></dt>
+<dd>
+The C, C++ and Objective C front ends now use the integrated
+preprocessor exclusively; their independent ability to tokenize an
+input stream has been removed.
+</dd>
+
+<dt><b>November 18, 2000</b></dt>
+<dd>
+G++ is now using a new C++ ABI that represents classes more compactly,
+uses shorter mangled names, and is optimized for higher run-time
+performance.  The implementation of the new ABI was contributed by
+Mark Mitchell, Nathan Sidwell, and Alexander Samuel of CodeSourcery,
+LLC.
+</dd>
+
+<dt><b>November 18, 2000</b></dt>
+<dd>
+GCC now supports ISO C99 declarations in <code>for</code> loops
+(<code>for (int i = 0; i &lt; 10; i++) /* ... */</code>).  These are
+only supported in C99 mode (command line options
+<code>-std=gnu99</code> or <code>-std=c99</code>), which will be the
+default in some future release, but not in GCC 3.0.
+</dd>
+
+<dt><b>November 14, 2000</b></dt>
+<dd>
+Michael Matz has donated an implementation of the Lengauer and Tarjan
+algorithm for computing dominators in the CFG.  This algorithm can
+be significantly faster and more space efficient than our older
+algorithm.  For one particularly nasty CFG from complex C++ code
+(more than 77000 basic blocks) compile time dropped from more than
+40 minutes to around 25 minutes.  Memory consumption was also
+dramatically decreased.
+</dd>
+
+<dt><b>November 13, 2000</b></dt>
+<dd>
+We have now switched the C++ frontend to use
+<a href="libstdc++/">libstdc++-v3</a>, a new implementation of the ISO
+Standard C++ Library which brings significant changes and improvements
+over our ``old'' library. There still be may some rough edges, but we
+are addressing problems as soon as we learn about them -- please help
+testing and improving ``your'' ports!
+</dd>
+
 <dt><b>November 13, 2000</b></dt>
 <dd>
 GCC now supports two more ISO C99 features:
