--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -20,9 +20,10 @@
 bug reporting system</a>.</p>
 
 <p>Before you report a bug, please check the <a href="#known">list of
-well-known bugs</a> and, if possible, try a newer development snapshot
-or <a href="http://www.codesourcery.com/gcc-compile.shtml">
-CodeSourcery's Online Test Compilation</a>.  If you want to report a
+well-known bugs</a> and, <strong>if possible in any way, try a current
+development snapshot
+or <a href="http://www.codesourcery.com/gcc-compile.shtml">CodeSourcery's
+Online Test Compilation</a></strong>.  If you want to report a
 bug with egcs 1.x or versions of GCC before 2.95 we strongly recommend
 upgrading to the current release first.</p>
 
