--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -66,7 +66,7 @@ does not foo", "objc crashes when doing bar".</dd>
   <dt>medium</dt>
   <dd>The problem should be solved in the next release.</dd>
   <dt>low</dt>
-  <dd>The problem should be solve in a future release.</dd>
+  <dd>The problem should be solved in a future release.</dd>
   </dl>
 </dd>
 
