Try to clarify a couple of issues.

--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -24,24 +24,24 @@ dejagnu 1.3 is not sufficient.  We have made dejagnu snapshots available at
 <a href="ftp://gcc.gnu.org/pub/gcc/infrastructure">ftp://gcc.gnu.org/pub/gcc/infrastructure</a>
 until a new version of dejagnu has been released.</p>
 
-<p>A few targets require specific preparations:</p>
+<p>Now you may need specific preparations:</p>
 
 <ul>
 
 <li>
 In order to run the libio tests on targets which do not fully
 support Unix/POSIX commands (e.g. Cgwin), the references to the dbz
-directory may be deleted from libio/configure.in.
+directory have to be deleted from libio/configure.in.
 </li>
 
 <li>
-<p>When there is difficulty resolving paths to the files init.tcl and
-runtest.exp, the following environment variables should be set
-appropriately, for example:</p>
+<p>The following environment variables must be set appropriately, as in
+the following example (which assumes that dejagnu has been installed under
+/usr/local):</p>
 
 <blockquote><code>
-TCL_LIBRARY = /usr/share/tcl8.0<br>
-DEJAGNULIBS = /usr/share/dejagnu
+TCL_LIBRARY = /usr/local/share/tcl8.0<br>
+DEJAGNULIBS = /usr/local/share/dejagnu
 </code></blockquote>
 
 <p>On systems such as Cygwin, these paths are required to be actual
