Cygwin-related updates. By Kelley Cook <kelley.cook@home.com>.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -616,10 +616,11 @@ recognize (via <code>uname -a</code>) the system as
 <hr>
 <h3><a name="windows"></a>Microsoft Windows (32 bit)</h3>
 
-<p>GCC currently builds under the <a href="http://www.cygwin.com/">Cygwin
-environment</a>.  However you need to delete (or rename) the texinfo
-directory included with the GCC sources.  You will also need to configure
-with the option <code>--with-included-gettext</code>.</p>
+<p>A port of GCC 2.95.x is included with the 
+<a href="http://www.cygwin.com/">Cygwin environment</a>.</p>
+
+<p>Current (as of early 2001) snapshots of GCC will build under Cygwin
+without modification.</p>
 
 <hr>
 <h3><a name="os2"></a>OS/2</h3>
