The avr port specific info

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -12,6 +12,7 @@ GNU Compiler Collection on your machine.</p>
 <ul>
   <li><a href="#alpha*-dec-linux*">alpha*-dec-linux*</a></li>
   <li><a href="#alpha*-dec-osf*">alpha*-dec-osf*</a></li>
+  <li><a href="#avr">avr</a></li>
   <li><a href="#dos">DOS</a></li>
   <li><a href="#hppa*-hp-hpux*">hppa*-hp-hpux*</a></li>
   <li><a href="#hppa*-hp-hpux9">hppa*-hp-hpux9</a></li>
@@ -103,6 +104,28 @@ it with the command <code>gcc -shared -o libstdc++.so.2.10.0
 sub-directory exists, repeat this command in it, with the additional
 flag <code>-mieee</code>.</p>
 
+<hr>
+<h3><a name="avr">avr</a></h3>
+
+<p>Use `configure --target=avr --enable-languages="c"' to configure GCC.</p>
+<p>Further installation notes and other useful information about AVR tools
+can also be obtained from: </p>
+<ul>
+  <li><a href="http://home.overta.ru/users/denisc">
+  http://home.overta.ru/users/denisc</a></li>
+  <li><a href="http://www.itnet.pl/amelektr/avr">
+  http://www.itnet.pl/amelektr/avr</a></li>
+</ul>
+
+<p>We strongly recommend to upgrade to binutils 2.11
+(or a current snapshot until 2.11 has been released).</p>
+
+<p>The following error:</p>
+<pre>
+  Error: register required
+</pre>
+<p>indicates that you should upgrade to a newer version of
+the binutils.</p>
 
 <hr>
 <h3><a name="dos">DOS</a></h3>
