--- a/htdocs/gcc-3.0/features.html
+++ b/htdocs/gcc-3.0/features.html
@@ -13,6 +13,7 @@
   <ul>
     <li>Port of gcc to Motorola's MCore 210 and 340 contributed.</li>
     <li>Port of gcc to Intel's XScale processor contributed.</li>
+    <li>Port of gcc to Atmel's AVR microcontrollers contributed.</li>
   </ul>
 </ul>
 
