* mail.html: Updated for new location. 	* libgcj.html: Updated for new location. 	* gcj.html: Updated for new location. 	* faq-portugese.html: Updated for new location. 	* FAQ.html: Updated for new location. 	* faq.html: Updated for new location.

--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -55,7 +55,7 @@
 <h1>
 O FAQ GCJ</h1>
 A &uacute;ltima vers&atilde;o deste documento sempre est&aacute; dispon&iacute;vel
-em <a href="http://sources.redhat.com/java/faq-portugese.html">http://sources.redhat.com/java/faq-portugese.html</a></p>
+em <a href="http://gcc.gnu.org/java/faq-portugese.html">http://gcc.gnu.org/java/faq-portugese.html</a></p>
 <p>This FAQ is also available in <a href="faq.html">English</a>.</p>
 <ol>
 <li>
@@ -618,7 +618,7 @@ fonte, mas podem ser usadas na compila&ccedil;&atilde;o de bytecodes. Veja
 lan&ccedil;amento;&nbsp; Como devo construir?</h3>
 
 <dd>
-Por favor, leia <a href="http://sources.redhat.com/java/build-snapshot.html">aqui</a>.&nbsp;</dd>
+Por favor, leia <a href="http://gcc.gnu.org/java/build-snapshot.html">aqui</a>.&nbsp;</dd>
 
 <br>&nbsp;
 <p>&nbsp;
@@ -979,7 +979,7 @@ est&aacute; o mesmo exemplo como uma aplica&ccedil;&atilde;o JNI.
 <p>Note que voc&ecirc; deve compilar os arquivos C++ usados pelo CNI com
 a op&ccedil;&atilde;o -fno-rtti.&nbsp;
 <p>A fonte de informa&ccedil;&atilde;o prim&aacute;ria sobre CNI est&aacute;
-em <a href="papers/cni/t1.html">http://sources.redhat.com/java/papers/cni/t1.html</a></blockquote>
+em <a href="papers/cni/t1.html">http://gcc.gnu.org/java/papers/cni/t1.html</a></blockquote>
 </td>
 </tr>
 
