--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -24,16 +24,14 @@
 		  <a href="build-snapshot.html">Build</a><br>
                   <a href="contrib.html">Contributing</a><br>
 		  <a href="done.html">Done with Gcj</A><br>
-                  <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+                  <a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Bugs</a><br>
                   <a href="thanks.html">Thanks</a><br>
                   <!-- <a href="support.html">Support</a><br> --> <br>
                   <br>
                   <br>
                   <a href="http://gcc.gnu.org">GCC</a><br>
-                  <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
-                  <a href="http://sourceware.cygnus.com">Sourceware</a><br>
+                  <a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
-                  <a href="http://www.redhat.com">Red Hat</a><br>
                 </td>
               </tr>
             </table>
@@ -46,7 +44,7 @@
     <td> <br>
       <br>
       <h1>The GCJ FAQ</h1>
-      <p>The latest version of this document is always available at <a href="faq.html">http://sourceware.cygnus.com/java/faq.html</a>.</p>
+      <p>The latest version of this document is always available at <a href="faq.html">http://gcc.gnu.org/java/faq.html</a>.</p>
       <p>This FAQ is also available in <a href="faq-portugese.html">Brazilian Portugese</a>.</p>
       <ol>
         <li><a href="#1_0">General Questions</a> 
@@ -140,7 +138,7 @@
         </dt>
         <p> 
         <dd>libgcj has a corresponding <a
-      href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Gnats 
+      href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?user=guest&amp;password=guest&amp;database=gcc&amp;cmd=login">Gnats 
           bug database</a> which you can browse. You can also submit new bug reports 
           from the Gnats page.</dd>
         <p></p>
@@ -181,7 +179,7 @@
         <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb 4.18</a> 
           includes support for debugging gcj-compiled Java programs. For linux, 
           you will need to use a recent development snapshot of gdb from 
-	  <a href="ftp://sourceware.cygnus.com/pub/gdb/snapshots/">ftp://sourceware.cygnus.com/pub/gdb/snapshots/</a> 
+	  <a href="ftp://sources.redhat.com/pub/gdb/snapshots/">ftp://sources.redhat.com/pub/gdb/snapshots/</a> 
 	  , or the gdb included with Redhat 6.1 and newwer. 
 	  The standard 4.18 does not have support for linux threads. 
 	  For more information please read 
@@ -390,7 +388,7 @@ $ gij HelloWorld
 	best (most efficient, cleanest) implementation of each method/class/package,
 	resolve any conflicts created by the merge, and test the final result. 
 	Needless to say, this is a lot of work. If you can help out, please
-	<A HREF="mailto:java-discuss@sourceware.cygnus.com">let us know</A>!
+	<A HREF="mailto:java-discuss@sources.redhat.com">let us know</A>!
       </dl>
 
       <hr>
@@ -443,7 +441,7 @@ ld: fatal: File processing errors. No output written to .libs/libfoo.so
 collect2: ld returned 1 exit status
 	</pre>
           A known workaround for this and other reported link problems on the 
-          various releases of Solaris is to build gcc/gcj with the <a href="ftp://sourceware.cygnus.com/pub/binutils/snapshots"> 
+          various releases of Solaris is to build gcc/gcj with the <a href="ftp://sources.redhat.com/pub/binutils/snapshots"> 
           latest GNU binutils</a> instead of the native Solaris <tt>ld</tt>. The 
           most straightforward way to do this is to build and install binutils, 
           and then reference it in the configure for gcc via <tt>--with-ld=/path_to_binutils_install/bin/ld</tt> 
@@ -774,14 +772,14 @@ $ ../configure [...]
         Note that you must compile the C++ files used for CNI with the
         -fno-rtti option.
         </p>
-        <p>The primary source of documentation for CNI is at <a href="papers/cni/t1.html">http://sourceware.cygnus.com/java/papers/cni/t1.html</a></p>
+        <p>The primary source of documentation for CNI is at <a href="papers/cni/t1.html">http://gcc.gnu.org/java/papers/cni/t1.html</a></p>
       </blockquote>
     </td>
   </tr>
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.33 2000/12/13 05:46:05 apbianco Exp $ </small></address>
+<small> $Id: faq.html,v 1.34 2000/12/18 23:20:51 warrenl Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
