--- a/htdocs/java/gcj.html
+++ b/htdocs/java/gcj.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="2; URL=http://sources.redhat.com/java/">
+<meta http-equiv="refresh" content="2; URL=http://gcc.gnu.org/java/">
 <title>The GCJ page has moved...</title>
 </head>
 <body>
-This page has moved to <a href="/java/">http://sources.redhat.com/java/</a>.
+This page has moved to <a href="/java/">http://gcc.gnu.org/java/</a>.
 <p>
 You should be taken to the new location automatically.
 <p>
