* contrib.html, about.html, docs.html, done.html, download.html, 	faq-portugese.html, index.html, projects.html, support.html, 	thanks.html, tm.html: Don't mention sources.redhat.com or Red 	Hat.

--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -27,9 +27,7 @@
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
 <a href="/mauve">The Mauve Project</a><br>
-<a href="/">Sources.redhat.com</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -172,7 +170,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.12 2000/08/14 03:11:17 green Exp $
+$Id: thanks.html,v 1.13 2000/12/18 23:20:51 warrenl Exp $
 </small>
 </address>
 
