--- a/htdocs/java/tm.html
+++ b/htdocs/java/tm.html
@@ -27,9 +27,7 @@
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
 <a href="/mauve">The Mauve Project</a><br>
-<a href="/">Sources.redhat.com</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -57,7 +55,7 @@ independent of Sun Microsystems, Inc.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: tm.html,v 1.5 2000/07/05 06:08:20 kingdon Exp $
+$Id: tm.html,v 1.6 2000/12/18 23:20:51 warrenl Exp $
 </small>
 </address>
 
