--- a/htdocs/java/about.html
+++ b/htdocs/java/about.html
@@ -27,9 +27,7 @@
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
 <a href="/mauve">The Mauve Project</a><br>
-<a href="/">Sources.redhat.com</a><br>
 <a href="http://www.gnu.org/">The GNU Project</a><br>
-<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -72,7 +70,7 @@ file</a> for web page changes.  Please help keep this up to date.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: about.html,v 1.5 2000/07/05 06:07:56 kingdon Exp $
+$Id: about.html,v 1.6 2000/12/18 23:20:51 warrenl Exp $
 </small>
 </address>
 
