--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -27,9 +27,7 @@
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
 <a href="/mauve">The Mauve Project</a><br>
-<a href="/">Sources.redhat.com</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -166,7 +164,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.7 2000/07/05 06:07:28 kingdon Exp $
+$Id: docs.html,v 1.8 2000/12/18 23:20:51 warrenl Exp $
 </small>
 </address>
 
