--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -31,9 +31,7 @@
                   <br>
                   <a href="http://gcc.gnu.org">GCC</a><br>
                   <a href="/mauve">The Mauve Project</a><br>
-                  <a href="/">Sources.redhat.com</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
-                  <a href="http://www.redhat.com">Red Hat</a><br>
                 </td>
               </tr>
             </table>
@@ -192,7 +190,7 @@
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.10 2001/01/09 16:25:58 apbianco Exp $ </small></address>
+<small> $Id: done.html,v 1.11 2001/01/18 22:35:32 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
