--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -30,9 +30,7 @@
                   <br>
                   <a href="http://gcc.gnu.org">GCC</a><br>
                   <a href="/mauve">The Mauve Project</a><br>
-                  <a href="/">Sources.redhat.com</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
-                  <a href="http://www.redhat.com">Red Hat</a><br>
                 </td>
               </tr>
             </table>
@@ -306,7 +304,7 @@ Runtime improvements
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.13 2000/10/29 22:18:58 tromey Exp $
+$Id: projects.html,v 1.14 2000/12/18 23:20:51 warrenl Exp $
 </small>
 </address>
 
