* contrib.html, done.html, libgcj-platforms.html, projects.html: 	Updated host for email address.
	* projects.html: `java-discuss' -> `java'.
	* old-news.html: `java-discuss' -> `java'.
	* libgcj-platforms.html: `java-discuss' -> `java'.
	* index.html: `java-discuss' -> `java'.
	* faq.html: `java-discuss' -> `java'.
	* download.html: `java-discuss' -> `java'.
	* done.html: `java-discuss' -> `java'.
	* mail.html: Mention `java' mailing list, not `java-discuss'.
	Removed java-testresults mailing list.

	* .htaccess: Fixed redirects.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -181,7 +181,7 @@ success/failure with GCJ versions other than the stable release.
 
 <p> 
 If you are successfully using a GCJ release other than the stable one,
-please email <a href="mailto:java-discuss@sources.redhat.com">the 
+please email <a href="mailto:java@gcc.gnu.org">the 
 GCJ Discussion mailing list</a> to report it. Thanks!
 
 
@@ -248,7 +248,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.16 2000/12/18 23:20:51 warrenl Exp $
+$Id: download.html,v 1.17 2001/01/27 23:58:00 tromey Exp $
 </small>
 </address>
 
