--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -388,7 +388,7 @@ $ gij HelloWorld
 	best (most efficient, cleanest) implementation of each method/class/package,
 	resolve any conflicts created by the merge, and test the final result. 
 	Needless to say, this is a lot of work. If you can help out, please
-	<A HREF="mailto:java-discuss@sources.redhat.com">let us know</A>!
+	<A HREF="mailto:java@gcc.gnu.org">let us know</A>!
       </dl>
 
       <hr>
@@ -779,7 +779,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.34 2000/12/18 23:20:51 warrenl Exp $ </small></address>
+<small> $Id: faq.html,v 1.35 2001/01/27 23:26:14 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
