--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -16,9 +16,9 @@ following chart for platforms that have already been covered if you have
 a choice of platforms to build upon.
 
 <p>Please send build/test results (in the format described below) to
-<a href="mailto:java-discuss@sources.redhat.com">java-discuss@sources.redhat.com</a>.
+<a href="mailto:java@gcc.gnu.org">java@gcc.gnu.org</a>.
 <br>You may also address questions to 
-<a href="mailto:java-discuss@sources.redhat.com">java-discuss</a>
+<a href="mailto:java@gcc.gnu.org">java-discuss</a>
 or to indicate that you would like to help in another way with some phase of the
 libgcj-2.95 release cycle.
 
@@ -191,7 +191,7 @@ it is necessary to comprehend the deviations.
 successfully, so differences should be expected.
  
 <p>Please send build/test results to
-<a href="mailto:java-discuss@sources.redhat.com">java-discuss@sources.redhat.com</a>
+<a href="mailto:java@gcc.gnu.org">java@gcc.gnu.org</a>
 in this format.
 
 <h2>Submitting Patches</h2>
@@ -203,7 +203,7 @@ by case basis.  All other changes will only go into the main trunk
 and not the libgcj-2_95-branch.
 
 <p>The mailing list, 
-<a href="mailto:java-patches@sources.redhat.com">java-patches@sources.redhat.com</a>
+<a href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>
 has been created for patch submissions.
 We plan to use this list just as egcs uses the egcs-patches list: all
 patches will be sent to the list.
@@ -223,7 +223,7 @@ as well as a
 link to the archives</a>.
 
 <p>The
-<a href="mailto:java-patches@sources.redhat.com">java-patches</a>
+<a href="mailto:java-patches@gcc.gnu.org">java-patches</a>
 mailing list is for patches to the libgcj code
 (libjava, boehm-gc, zlib, etc) code only.
 In particular, compiler patches still have to go through egcs, so
