--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -63,13 +63,9 @@ below to view the archives.
    Low volume, moderated, announcements-only mailing list.
 </dd>
 
-<dt><b><a href="/ml/java-discuss/">java-discuss</a></b></dt>
+<dt><b><a href="/ml/java/">java</a></b></dt>
 <dd>
    Moderate volume discussion/question mailing list.
-</dd>
-<dt><b><a href="/ml/java-testresults/">java-testresults</a></b></dt>
-<dd>
-   Moderate volume test results mailing list.
 </dd>
 <dt><b><a href="/ml/java-patches/">java-patches</a></b></dt>
 <dd>
@@ -114,7 +110,7 @@ of these lists:
   Mailing list: 
   <select name="listname">
    <option value="java-announce">java-announce
-   <option value="java-discuss">java-discuss
+   <option value="java">java
    <option value="java-patches">java-patches
    <option value="java-testresults">java-testresults
    <option value="java-prs">java-prs
@@ -148,7 +144,7 @@ see our <a href="/ml/#faqs">mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.10 2000/12/18 23:20:51 warrenl Exp $
+$Id: mail.html,v 1.11 2001/01/27 23:26:14 tromey Exp $
 </small>
 </address>
 
