--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -30,7 +30,7 @@ gcj.
 <b>June 27, 2000</b>
 </td><td>
 A new <A HREF="done.html">Done with GCJ</A> section was added.
-Send your GCJ stories <A HREF="mailto:java-discuss@sources.redhat.com">
+Send your GCJ stories <A HREF="mailto:java@gcc.gnu.org">
 here</A>.
 </td></tr>
 
@@ -81,7 +81,7 @@ Tom Tromey wrote most of <tt>java.awt.event</tt>.
 Anthony Green made
 <a href="ftp://sources.redhat.com/pub/java/rpm/">RPMs</a>
 of gcj and libgcj.  See his original
-<a href="http://sources.redhat.com/ml/java-discuss/2000-04/msg00022.html">message</a> for some caveats.
+<a href="http://sources.redhat.com/ml/java/2000-04/msg00022.html">message</a> for some caveats.
 </td></tr>
 
 <tr><td valign="top">
