--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -48,10 +48,10 @@ What follows is a list of projects that the GCJ community would love
 to see someone pick up and run with.  If you're interested in any of
 these, be sure to send a note with your questions, ideas or intentions
 to the <a
-href="mailto:java-discuss@sources.redhat.com">java-discuss</a>
+href="mailto:java@gcc.gnu.org">java-discuss</a>
 mailing list.  Similarly, if you would like to see a project listed
 here that isn't, send a patch for this HTML file to the <a
-href="mailto:java-patches@sources.redhat.com">java-patches</a> list.
+href="mailto:java-patches@gcc.gnu.org">java-patches</a> list.
 
 <p>
 
@@ -198,7 +198,7 @@ we want:
 
 	  <li>Change the current lock implementation to use thin
 	  locks, and see how that affects performance.  (This has been
-	  discussed on java-discuss several times.)
+	  discussed on the java mailing list several times.)
 	</ul>
 <p>
 
@@ -290,7 +290,7 @@ Runtime improvements
             application.  On Windows, it might make sense to do this
             using the standard resource mechanism.  This has been
             <a
-            href="http://sources.redhat.com/ml/java-discuss/1999-q3/msg00318.html">discussed</a>
+            href="http://sources.redhat.com/ml/java/1999-q3/msg00318.html">discussed</a>
             on the mailing list a bit.
 	  </ul>
 <p>
@@ -304,7 +304,7 @@ Runtime improvements
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.14 2000/12/18 23:20:51 warrenl Exp $
+$Id: projects.html,v 1.15 2001/01/27 23:58:00 tromey Exp $
 </small>
 </address>
 
