--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -142,7 +142,7 @@ projects</a>.
   </ul>
 
     <p>Send <tt>libgcj</tt>patches to <a
-	href="mailto:java-patches@sources.redhat.com">the patch mailing
+	href="mailto:java-patches@gcc.gnu.org">the patch mailing
 	list</a>.  This list is <a href="/ml/java-patches/">archived</a>.
     <p>Patches to the gcj front end -- the <tt>gcc/java</tt> directory --
        should be sent to <a href="mailto:gcc-patches@gcc.gnu.org">the gcc
@@ -228,7 +228,7 @@ projects</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: contrib.html,v 1.11 2001/01/18 22:39:30 tromey Exp $
+$Id: contrib.html,v 1.12 2001/01/27 23:58:00 tromey Exp $
 </small>
 </address>
 
