--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -92,7 +92,7 @@ great compiler work.
 <li>Alexandre Oliva for all of this porting and testing efforts.
 <li>Kresten Krab Thorup for his fantastic bytecode interpreter.
 <li>Warren Levy for his tremendous library work.
-<li>All of the Mauve project <a href="/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
+<li>All of the Mauve project <a href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
 <li>Rainer Orth for configuration clean-ups and porting help.
 <li>Alexandre Petit-Bianco for implementing much of the compiler, and continued maintainership.
 <li>Rolf W. Rasmussen for hacking on AWT.
@@ -170,7 +170,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.13 2000/12/18 23:20:51 warrenl Exp $
+$Id: thanks.html,v 1.14 2001/01/27 23:58:00 tromey Exp $
 </small>
 </address>
 
