* about.html, contrib.html, docs.html, done.html, download.html, 	faq-portugese.html, index.html, libgcj-platforms.html, mail.html, 	projects.html, support.html, thanks.html, tm.html: Updated Mauve 	link.

--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -26,7 +26,7 @@
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="/mauve">The Mauve Project</a><br>
+<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -164,7 +164,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.8 2000/12/18 23:20:51 warrenl Exp $
+$Id: docs.html,v 1.9 2001/01/27 23:58:00 tromey Exp $
 </small>
 </address>
 
