--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -30,7 +30,7 @@
                   <br>
                   <br>
                   <a href="http://gcc.gnu.org">GCC</a><br>
-                  <a href="/mauve">The Mauve Project</a><br>
+                  <a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
                 </td>
               </tr>
@@ -190,7 +190,7 @@
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.12 2001/01/27 23:58:00 tromey Exp $ </small></address>
+<small> $Id: done.html,v 1.13 2001/01/28 20:55:43 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
