--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -35,7 +35,7 @@
 <br><!-- <a href="support.html">Support</a><br> -->
 <br>&nbsp;
 <p><a href="http://gcc.gnu.org">GCC</a>
-<br><a href="/mauve">The Mauve Project</a>
+<br><a href="http://sources.redhat.com/mauve">The Mauve Project</a>
 <br><a href="http://www.gnu.org">The GNU Project</a>
 </tr>
 </table>
