--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -29,7 +29,7 @@
                   <br>
                   <br>
                   <a href="http://gcc.gnu.org">GCC</a><br>
-                  <a href="/mauve">The Mauve Project</a><br>
+                  <a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
                 </td>
               </tr>
@@ -304,7 +304,7 @@ Runtime improvements
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.15 2001/01/27 23:58:00 tromey Exp $
+$Id: projects.html,v 1.16 2001/01/28 20:55:44 tromey Exp $
 </small>
 </address>
 
