--- a/htdocs/java/about.html
+++ b/htdocs/java/about.html
@@ -26,7 +26,7 @@
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="/mauve">The Mauve Project</a><br>
+<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
 <a href="http://www.gnu.org/">The GNU Project</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -70,7 +70,7 @@ file</a> for web page changes.  Please help keep this up to date.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: about.html,v 1.6 2000/12/18 23:20:51 warrenl Exp $
+$Id: about.html,v 1.7 2001/01/27 23:58:00 tromey Exp $
 </small>
 </address>
 
