--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -26,7 +26,7 @@
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="/mauve">The Mauve Project</a><br>
+<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -228,7 +228,7 @@ projects</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: contrib.html,v 1.12 2001/01/27 23:58:00 tromey Exp $
+$Id: contrib.html,v 1.13 2001/01/28 20:55:43 tromey Exp $
 </small>
 </address>
 
