--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -26,7 +26,7 @@
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="/mauve">The Mauve Project</a><br>
+<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -248,7 +248,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.17 2001/01/27 23:58:00 tromey Exp $
+$Id: download.html,v 1.18 2001/01/28 20:55:43 tromey Exp $
 </small>
 </address>
 
