--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -44,10 +44,10 @@ tree and run <tt>'make check'</tt> after doing the following:
 <ul>
   <li>In order to more fully exercise libgcj, it is highly recommended to
   include the 
-  <a href="/mauve/">Mauve testsuite</a>
+  <a href="http://sources.redhat.com/mauve/">Mauve testsuite</a>
   in the test run.
   <br>The Mauve tests are available for
-  <a href="/mauve/download.html">download</a>
+  <a href="http://sources.redhat.com/mauve/download.html">download</a>
   via both anonymous cvs and snapshots.
   <li>The env variable MAUVEDIR must be set to the top of the Mauve source tree
   <li>The testsuites rely on the dejagnu package.  You can download the
