--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -26,7 +26,7 @@
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="/mauve">The Mauve Project</a><br>
+<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -143,7 +143,7 @@ see our <a href="/ml/#faqs">mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.12 2001/01/28 20:55:43 tromey Exp $
+$Id: mail.html,v 1.13 2001/01/28 21:04:43 tromey Exp $
 </small>
 </address>
 
