--- a/htdocs/java/support.html
+++ b/htdocs/java/support.html
@@ -26,7 +26,7 @@
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="/mauve">The Mauve Project</a><br>
+<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -53,7 +53,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: support.html,v 1.6 2000/12/18 23:20:51 warrenl Exp $
+$Id: support.html,v 1.7 2001/01/27 23:58:00 tromey Exp $
 </small>
 </address>
 
