--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -26,7 +26,7 @@
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="/mauve">The Mauve Project</a><br>
+<a href="http://sources.redhat.com/mauve">The Mauve Project</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -170,7 +170,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.14 2001/01/27 23:58:00 tromey Exp $
+$Id: thanks.html,v 1.15 2001/01/28 21:04:43 tromey Exp $
 </small>
 </address>
 
