* about.html, contrib.html, docs.html, done.html, download.html, 	faq-portugese.html, faq.html, index.html, mail.html, 	port-signals.html, projects.html, support.html, thanks.html, 	tm.html: Removed keyword expansion code.
	* download.html, index.html, libgcj-platforms.html, projects.html:
	`egcs' -> `gcc'.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -151,15 +151,15 @@ cvs -z 9 -d :ext:username@gcc.gnu.org:/cvs/gcc co gcc
 <h3>cvsweb</h3>
 
 You can also view the libgcj component cvs archive: the 
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/boehm-gc/">boehm-gc</A>,
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/libffi/">libffi</A>,
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/libjava/">libjava</A>,
-and <A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/fastjar/">fastjar</A>.
+<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/boehm-gc/">boehm-gc</A>,
+<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libffi/">libffi</A>,
+<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libjava/">libjava</A>,
+and <A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">fastjar</A>.
 <p>
 Here's the Java front end <a
-href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/gcc/java">cvs
+href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/java">cvs
 archive</a> (the entire compiler is also 
-<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs">available</a>.)
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc">available</a>.)
 
 <!----------------------------------
 
@@ -242,15 +242,6 @@ for more details on downloading and using this release.</td>
 
 </td></tr>
 </table>
-<hr>
-
-<address>
-<a href="about.html">The GCJ team</a>
-<br>
-<small>
-$Id: download.html,v 1.18 2001/01/28 20:55:43 tromey Exp $
-</small>
-</address>
 
 </body>
 </html>
