--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -90,7 +90,7 @@ Thanks to Richard Henderson's recent libffi changes, the libgcj bytecode interpr
 The libgcj sources have <A HREF="/ml/java/2000-12/msg00102.html">
 migrated</A> to the gcc repository. We've imported
 <A HREF="http://sourceforge.net/projects/fastjar">fastjar</A> in our
-<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/fastjar/">tree</A>
+<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/fastjar/">tree</A>
 and use it as a replacement to zip.  </td></tr>
 
 <tr><td valign="top">
@@ -224,16 +224,6 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 
 </td></tr>
 </table>
-
-<hr>
-
-<address>
-<a href="about.html">The GCJ team</a>
-<br>
-<small>
-$Id: index.html,v 1.63 2001/01/28 20:55:43 tromey Exp $
-</small>
-</address>
 
 </body>
 </html>
