--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -51,12 +51,12 @@ tree and run <tt>'make check'</tt> after doing the following:
   via both anonymous cvs and snapshots.
   <li>The env variable MAUVEDIR must be set to the top of the Mauve source tree
   <li>The testsuites rely on the dejagnu package.  You can download the
-  <a href="ftp://gcc.gnu.org/pub/egcs/infrastructure/dejagnu-19990614.tar.gz">current dejagnu snapshot</a>
-  from egcs.  Please note that some earlier versions of dejagnu are missing a
+  <a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/dejagnu-19990614.tar.gz">current dejagnu snapshot</a>
+  from gcc.  Please note that some earlier versions of dejagnu are missing a
   patch that's in recent snapshots.  Please make sure you have tried
   running the testsuites with the current snapshot of dejagnu before reporting
   any testsuite platform problems.  There is a short entry in the
-  <a href="http://gcc.gnu.org/faq.html#dejagnu">egcs FAQ</a>
+  <a href="http://gcc.gnu.org/faq.html#dejagnu">gcc FAQ</a>
   if you would like more information about this issue.
 </ul>
 
@@ -69,10 +69,10 @@ tree and run <tt>'make check'</tt> after doing the following:
   configuration option for building with dynamic libraries.  This is to avoid
   having to explicitly specify some libgcj object modules on the link line
   to get certain java/net Mauve tests to execute.
-  <li>An egcs patch affecting <tt>gcj</tt> was made on 24-June-99.
-  Developers using cvs to access the egcs source should update an rebuild
+  <li>An gcc patch affecting <tt>gcj</tt> was made on 24-June-99.
+  Developers using cvs to access the gcc source should update an rebuild
   to get that fix.  The next
-  <a href="ftp://gcc.gnu.org/pub/egcs/snapshots/index.html">egcs snapshot</a>
+  <a href="ftp://gcc.gnu.org/pub/gcc/snapshots/index.html">gcc snapshot</a>
   with this patch will not be available until 30-June-99.  At that point
   developers without cvs access should download that patch.  In the
   meantime, the problem can be avoided in test runs with the following
@@ -205,7 +205,7 @@ and not the libgcj-2_95-branch.
 <p>The mailing list, 
 <a href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>
 has been created for patch submissions.
-We plan to use this list just as egcs uses the egcs-patches list: all
+We plan to use this list just as gcc uses the gcc-patches list: all
 patches will be sent to the list.
 If you have a patch you want considered, please send it there along
 with an explanation and a ChangeLog entry.
@@ -216,7 +216,7 @@ Developers with direct checkin access should also send patches to this
 list; this can happen concurrently with the checkin.
 
 <p>Some discussion will probably take place on this list (just as with
-egcs-patches).  The 
+gcc-patches).  The 
 <a href="/java/">web page has subscription info</a>,
 as well as a
 <a href="/ml/java-patches/">
@@ -226,7 +226,7 @@ link to the archives</a>.
 <a href="mailto:java-patches@gcc.gnu.org">java-patches</a>
 mailing list is for patches to the libgcj code
 (libjava, boehm-gc, zlib, etc) code only.
-In particular, compiler patches still have to go through egcs, so
+In particular, compiler patches still have to go through gcc, so
 please don't send them to java-patches.
 
 
