--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -118,7 +118,7 @@ ensure the integrity of the security model.
 <p> 
 
 GCJ contains a <a
-href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/~checkout~/egcs/gcc/java/verify.c">verifier</a>
+href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/~checkout~/gcc/gcc/java/verify.c">verifier</a>
 to ensure the validity of natively compiled code.  What's really needed is
 a verification package that the libgcj ClassLoader can use to 
 verify dynamically loaded bytecode.  It may be possible to use
@@ -298,15 +298,6 @@ Runtime improvements
 </td>
 </tr>
 </table>
-<hr>
-
-<address>
-<a href="about.html">The GCJ team</a>
-<br>
-<small>
-$Id: projects.html,v 1.16 2001/01/28 20:55:44 tromey Exp $
-</small>
-</address>
 
 </body>
 </html>
