* about.html: Removed.
	* download.html: Typo fix.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -139,7 +139,7 @@ cvs -z9 -d:pserver:anoncvs@gcc.gnu.org:/cvs/gcc co gcc
 <p>
 
 Here's how to perform a <A HREF="http://gcc.gnu.org/cvswrite.html">
-read-write</A> CVS access, provided that you're were givin a account
+read-write</A> CVS access, provided that you're were given a account
 on <tt>gcc.gnu.org</tt>:
 
 <small>
