* index.html: Nits.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,11 +73,11 @@ i
 <tr><td valign="top">
 <b>January 28, 2001</b>
 </td><td>
-The various gcj mailing lists have all moved to gcc.gnu.org.
+The various gcj mailing lists have moved to gcc.gnu.org.
 Unused lists have been removed, and java-discuss was renamed
 to java.  See <a href="/ml/java/2001-01/msg00539.html">the announcement</a>
 for all the gory details.  With this change, the gcj project
-is now fully merged into gcc.
+is now fully merged into GCC.
 </td></tr>
 
 <tr><td valign="top">
