Remove project to merge libstdc++/links.html into readings.html (now done).

--- a/htdocs/projects/web.html
+++ b/htdocs/projects/web.html
@@ -26,10 +26,8 @@ of being implemented soon. ;-)</p>
 <li>Arrange for the preprocessing (style.mhtml) to apply to the copy
     of the web pages on www.gnu.org as well as that on
     gcc.gnu.org.</li>
-<li>Merge <a href="../libstdc++/links.html">libstdc++/links.html</a>
-    into <a href="../readings.html">readings.html</a>, and <a
-    href="../libstdc++/thanks.html">libstdc++/thanks.html</a> into
-    contrib.texi.</li>
+<li>Merge <a href="../libstdc++/thanks.html">libstdc++/thanks.html</a>
+    into contrib.texi.</li>
 </ul>
 
 </body>
