--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -8,7 +8,8 @@
 <h1 align=center>GCC Front-Ends</h1>
 
 <p>Currently the main GCC distribution contains front-ends for C
-(gcc), C++ (g++), Objective C, Chill, Fortran (g77), and Java (<a
+(gcc), C++ (g++), Objective C, Chill (unmaintained),
+Fortran (g77), and Java (<a
 href="http://sources.redhat.com/java/">GCJ</A>).</p>
 
 <p>There are several more front-ends for different languages that have
